# lapis

./: CMakeLists.txt  README.md
lib/gl/: gl.h
lib/gles/: gles.h
src/: aww.glsl  libs.h  main.cpp
src/engine-core/: core.h  globals.h
src/engine-core/file/: file.cpp  file.h
src/engine-core/shader/: shader.cpp  shader.h
src/engine-core/window/: window.cpp  window.h
src/engine-editor/: gui.cpp
src/engine-editor/ui/: ui.cpp  ui.h
src/gui/: gui.cpp  gui.h
